[package]
name = "consumer-example-events"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
indexmap = "2.1"

[dependencies.stellar-xdr]
version = "*"
features = ["std", "curr", "serde"]
git = "https://github.com/stellar/rs-stellar-xdr"
branch = "add-events-to-contract-spec"
