[package]
name = "stellar-events"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"

[dependencies.stellar-xdr]
version = "*"
features = ["std", "curr", "serde"]
git = "https://github.com/stellar/rs-stellar-xdr"
branch = "add-events-to-contract-spec"
